<resources>
    <string name="app_name">AREA</string>
    <string name="en_sign_up"><u>Sign up</u></string>
    <string name="en_log_in">Log in</string>
    <string name="en_register">Register</string>
    <string name="en_email_address">Email Address</string>
    <string name="en_password">Password</string>
    <string name="en_username">Username</string>
    <string name="en_home">Home</string>
    <string name="en_profile">Profile</string>
    <string name="en_settings">Settings</string>
    <string name="en_widgets">Widgets</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="en_language">Language</string>
    <string name="en_error">Error</string>
    <string name="sender_id">447317115952</string>
    <string name="en_or">or</string>
    <string name="token_null">Token is null.</string>
    <string name="no_internet">No internet connection.</string>
    <string name="error">Error: %1$s</string>
    <string name="lang_en">English</string>
    <string name="lang_fr">Français</string>
    <string name="en_create_new">Create a new</string>
    <string name="en_widget"><u>widget</u></string>
    <string name="en_choose_service">Choose a service</string>
    <string name="en_choose_action">Choose an action</string>
    <string name="en_choose_reaction">Choose a reaction</string>

    <string name="facebook_app_id">359810634746275</string>
    <string name="fb_login_protocol_scheme">fb359810634746275</string>

    <string name="CONSUMER_KEY">1SlXbsRd5HKgdA6pzaG2jfuQb</string>
    <string name="CONSUMER_SECRET">PtgmZ21I56XMkIrGtdZQBEeF89QD97NAlXXqQIWGJKFANnsT3t</string>

    <string name="server_client_id">348333225838-43rcuddes9uftacun2drni5h3hpkbja9.apps.googleusercontent.com</string>

</resources>