<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

   <group android:checkableBehavior="single">
       <item
           android:id="@+id/activity_main_drawer_widgets"
           android:icon="@drawable/ic_widgets_black_24dp"
           android:title="@string/en_widgets" />
    </group>

   <item android:title="Configuration">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_profile"
                    android:icon="@drawable/ic_account_circle_black_24dp"
                    android:title="@string/en_profile" />
                <item
                    android:id="@+id/activity_main_drawer_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:title="@string/en_settings" />
            </group>
        </menu>
    </item>
</menu>
