<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/fragment_news_rootview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teamponey.teamponeay.area.Fragments.ProfileFrag"
    android:background="#FFF">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/en_profile"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/en_username"
        android:layout_below="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/en_username"
        android:layout_marginStart="20dp"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/user_username"
        android:layout_below="@+id/en_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/en_error"
        android:layout_marginStart="20dp"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/en_language"
        android:layout_below="@+id/en_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/en_language"
        android:layout_marginStart="20dp"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/user_language"
        android:layout_below="@+id/en_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/en_error"
        android:layout_marginStart="20dp"
        android:textColor="#000"
        android:textSize="20sp" />

</RelativeLayout>