<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/tvTitle"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="AREA"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="41dp" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:text="v@c.com"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:hint="@string/en_email_address"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:text="12345678"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etEmailAddress"
        android:hint="@string/en_password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:textColor="@color/colorWhite"
        android:background="@color/colorSecondary"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/en_log_in" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:text="@string/en_or"
        android:textStyle="bold" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_below="@+id/tvOr"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Sign out" />
    <!--

    <TextView
        android:id="@+id/tvOr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:text="@string/en_or"
        android:textStyle="bold" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvOr2"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    -->

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in_button"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/error"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorWhite"
        android:text=" "
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_above="@+id/etIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textColor="@color/colorWhite"
        android:onClick="onClick"
        android:text="@string/en_sign_up"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

</RelativeLayout>