<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/tvTitle"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/en_register"
        android:textAlignment="center"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/etEmailAddress"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:hint="@string/en_email_address"
        android:text="v@c.com"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etEmailAddress"
        android:hint="@string/en_password"
        android:ems="10"
        android:text="12345678"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/spinnerWindow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/bLogin"
        android:textColor="@color/colorWhite"
        android:background="@color/colorSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerWindow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/en_register" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/error"
        android:layout_below="@+id/bLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorWhite"
        android:text=" "
        android:textStyle="bold" />


</RelativeLayout>